--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "generate": "nuxt generate"
     },
     "dependencies": {
+        "@nuxtjs/auth-next": "5.0.0-1611574754.9020f2a",
         "@nuxtjs/axios": "^5.3.6",
         "@nuxtjs/vuetify": "^1.11.2",
         "babel-eslint": "^10.0.3",
